--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>	
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="js/lib/jquery-1.9.1.min.js"></script>
 <meta charset="utf-8">
 <title>Kenny Rocker</title>
@@ -169,17 +169,6 @@
       </div>
 
    </div>
-
-   <script>
-       if (navigator.serviceWorker) {
-           window.addEventListener('load', function(){
-               navigator.serviceWorker
-                   .register('../pwa.js')
-                   .then(function(){ console.log('Service Worker :: Register')})
-                   .catch(function(err){ console.log('Service Worker Register :: ',err)})
-           });
-       }
-   </script>
    <script src="js/TimeLine.js"></script>
    <script>
        $(document).ready(function(){
