--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src="js/lib/jquery-1.9.1.min.js"></script>
+<script> window.jQuery || document.write('<script src="js/lib/jquery-1.9.1.min.js"><\/script>')</script>
 <meta charset="utf-8">
 <title>Kenny Rocker</title>
 
